Refactored to use CyberCore